@startuml
namespace visitor {
    class AreaVisitor << (S,Aquamarine) >> {
        + Visit(shape Shape) 

    }
    class Circle << (S,Aquamarine) >> {
        + Accept(v Visitor) 

    }
    class PerimeterVisitor << (S,Aquamarine) >> {
        + Visit(shape Shape) 

    }
    interface Shape  {
        + Accept( Visitor) 

    }
    class Square << (S,Aquamarine) >> {
        + Accept(v Visitor) 

    }
    interface Visitor  {
        + Visit( Shape) 

    }
}

"shapes.Circle" *-up- "visitor.Circle"
"shapes.Square" *-up- "visitor.Square"

note left of "shapes.Square": maintained by 3rd party or legacy code,\nit's difficult to modify it


"visitor.Visitor" <|-- "visitor.AreaVisitor"
"visitor.Shape" <|-- "visitor.Circle"
"visitor.Visitor" <|-- "visitor.PerimeterVisitor"
"visitor.Shape" <|-- "visitor.Square"

@enduml
